# SharedMeatAxe

./: .gitignore  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.conf.dist  NEWS  README  configure.ac
doc/: annotated.html  c-args_8h_source.html  c-bitstring_8h_source.html  c-charpol_8h_source.html  c-ffio_8h_source.html  c-ffmat_8h_source.html  c-ffrow_8h_source.html  c-fileio_8h_source.html  c-fpoly_8h_source.html  c-grease_8h_source.html  c-kernel_8h_source.html  c-matins_8h_source.html  c-matrix_8h_source.html  c-matset_8h_source.html  c-os_8h_source.html  c-perm_8h_source.html  c-poly_8h_source.html  c-pseed_8h_source.html  c-quot_8h_source.html  c-random_8h_source.html  c-sets_8h_source.html  c-stf_8h_source.html  c-tensor_8h_source.html  changelog.html  check_8h_source.html  classes.html  config_8h_source.html  files.html  formula.repository  functions.html  functions_vars.html  group__app.html  group__bs.html  group__cfinfo.html  group__charpol.html  group__endo.html  group__ff.html  group__ff2.html  group__ffio.html  group__ffrow.html  (+120 more)
etc/: Doxyfile  layout.xml  meataxe-footer.html
etc/.svn/: entries
etc/.svn/text-base/: Doxyfile.svn-base  meataxe-header.html.svn-base
src/: Makefile.am  args.c  berlekmp.c  bsop.c  c-kernel.c  cfcomp.c  cfinfo.c  changelog.doc  charpol.c  chbasis.c  chop.c  decomp.c  error.c  ffio.c  fpcore.c  genmod.c  homcomp.c  imatcore.c  intio.c  isisom.c  kernel-0.c  maddmul.c  maketabF.c  matadd.c  matclean.c  matcmp.c  matcopy.c  matcore.c  matcut.c  matech.c  matins.c  matinv.c  matmul.c  matnull.c  matorder.c  matpivot.c  matpwr.c  matread.c  mattrace.c  matwrite.c  (+84 more)
test/: Makefile.am  c-args.c  c-kernel.c  config  t-0000  t-0100  t-0105  t-0106  t-0107  t-0108  t-0109  t-0110  t-0111  t-0112  t-0113  t-0114  t-0115  t-0116  t-0117  t-0118  t-0200  t-0201  t-0210  t-0211  t-0212  t-0213  t-0214  t-0215  t.config  zzztest.c
test/data/.svn/: entries
