# -----> Headers
dist_noinst_HEADERS         = c-args.h c-charpol.h c-ffmat.h \
	c-fileio.h c-grease.h c-kernel.h c-matrix.h c-os.h c-poly.h c-quot.h \
	c-sets.h c-tensor.h c-bitstring.h c-ffio.h c-ffrow.h c-fpoly.h check.h \
	c-matins.h c-matset.h c-perm.h c-pseed.h c-random.h c-stf.h


# -----> Executables (for tests)

LDADD = $(lib_LTLIBRARIES)

check_PROGRAMS = checksum c-args c-bitstring c-charpol\
	c-ffio c-fileio c-ffmat c-ffrow c-fpoly \
	c-grease c-kernel c-matins c-matrix c-matset\
	c-os c-perm c-poly c-pseed c-quot c-random \
	c-sets c-stf c-tensor zzztest

